# auld-router

./: README.md  initialize_repository.py  pyproject.toml  requirements.txt  tasks.py
developer notes/: cli.md  configuration.md  tips.md
requirements/: dev.in  dev.txt  lint.txt  main.txt  tests.in  tests.txt
src/auld_router/: __main__.py  _version.py  cli.py  commands.py  configuration.py  show_commands.py
tools/auld-tools/: auto_readme.py
